добавлен клиентский адрес

--- a/claim-gateway/src/main/resources/application.properties
+++ b/claim-gateway/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 #Sun Dec 03 17:11:26 NOVT 2023
 micronaut.application.name=claim-gateway
+
+# Microservices-URL
 micronaut.http.services.claim-user.url=http://localhost:8081
+micronaut.http.services.claim-auth.url=http://localhost:8082
